--- a/_posts/2021-05-01-13.md
+++ b/_posts/2021-05-01-13.md
@@ -5,28 +5,28 @@ categories: [Etc]
 tags: [mac]     # TAG names should always be lowercase
 ---
 <script>
-const request = new XMLHttpRequest();
-const url = 'https://github.com/lyw1217/TIL/blob/main/Linux/tar_%EB%AA%85%EB%A0%B9%EC%96%B4_%EC%82%AC%EC%9A%A9%EB%B2%95.md';
-console.log(url);
-request.open('GET', url, true);
-request.onload = function () {
-    console.log("HERE");
-    var htmlText = request.responseText;
-    console.log(htmlText);
+//const request = new XMLHttpRequest();
+//const url = 'https://github.com/lyw1217/TIL/blob/main/Linux/tar_%EB%AA%85%EB%A0%B9%EC%96%B4_%EC%82%AC%EC%9A%A9%EB%B2%95.md';
+//console.log(url);
+//request.open('GET', url, true);
+//request.onload = function () {
+//    console.log("HERE");
+//    var htmlText = request.responseText;
+//    console.log(htmlText);
+//
+//    const readme = request.getElementById('readme');
+//    const content = document.getElementsByClassName('post-content');
+//    let new_Tag = document.createElement('div');
+//
+//    new_Tag.setAttribute('id', 'blog_contents');
+//    new_Tag.innerHTML = readme;
+//    content.appendChild(new_Tag);
+//}
+//request.send( null );
 
-    const readme = request.getElementById('readme');
-    const content = document.getElementsByClassName('post-content');
-    let new_Tag = document.createElement('div');
-
-    new_Tag.setAttribute('id', 'blog_contents');
-    new_Tag.innerHTML = readme;
-    content.appendChild(new_Tag);
-}
-request.send( null );
-
-//const myRequest = new Request('https://github.com/lyw1217/TIL/blob/main/Linux/tar_%EB%AA%85%EB%A0%B9%EC%96%B4_%EC%82%AC%EC%9A%A9%EB%B2%95.md');   
-//    fetch(myRequest, {
-//      mode: 'cors'
-//    })
-//    .then(response => console.log(response));
+const myRequest = new Request('https://github.com/lyw1217/TIL/blob/main/Linux/tar_%EB%AA%85%EB%A0%B9%EC%96%B4_%EC%82%AC%EC%9A%A9%EB%B2%95.md');   
+    fetch(myRequest, {
+      mode: 'cors'
+    })
+    .then(response => console.log(response));
 </script>
