이미지 링크 오류 수정

--- a/_posts/2021-07-01-31.md
+++ b/_posts/2021-07-01-31.md
@@ -43,7 +43,7 @@ tags: ["backend", "linux"]     # TAG names should always be lowercase
 
 ## 명령어 실행 결과
 
-![images](https://github.com/lyw1217/TIL/blob/main/Linux/images/linux_user.png?raw=true)
+![images](https://raw.githubusercontent.com/lyw1217/TIL/main/Linux/images/linux_user.png)
 
 ## 참고자료
 
