Etc 카테고리 중복

--- a/_posts/2021-07-30-39.md
+++ b/_posts/2021-07-30-39.md
@@ -1,7 +1,7 @@
 ---
 title: "[3GPP] 규격 문서 다운로드 받는 곳"
 date: 2021-07-30 10:21:00 +0900
-categories: ["Radio", "Etc"]
+categories: ["Radio", "3GPP"]
 tags: ["radio", "3gpp"]     # TAG names should always be lowercase
 ---
 
