--- a/_posts/2021-08-03-41.md
+++ b/_posts/2021-08-03-41.md
@@ -1,7 +1,7 @@
 ---
 title: "[3GPP] Temporary Public User Identity (Temporary PuID)"
 date: 2021-08-03 17:57:00 +0900
-categories: ["Radio", "Etc"]
+categories: ["Radio", "3GPP"]
 tags: ["radio", "3gpp"]     # TAG names should always be lowercase
 ---
 
