--- a/_posts/2021-08-02-40.md
+++ b/_posts/2021-08-02-40.md
@@ -1,7 +1,7 @@
 ---
 title: "이동통신 세대별 명칭"
 date: 2021-08-02 15:27:00 +0900
-categories: ["Radio", "Etc"]
+categories: ["Radio", "3GPP"]
 tags: ["radio", "3gpp"]     # TAG names should always be lowercase
 ---
 
