--- a/_posts/2021-08-04-42.md
+++ b/_posts/2021-08-04-42.md
@@ -1,7 +1,7 @@
 ---
 title: "[3GPP] PuID(Public User ID)와 PrID(Private User ID)"
 date: 2021-08-04 10:31:00 +0900
-categories: ["Radio", "Etc"]
+categories: ["Radio", "3GPP"]
 tags: ["radio", "3gpp"]     # TAG names should always be lowercase
 ---
 
