제목에 인라인 코드블록 삭제

--- a/_posts/2021-12-06-64.md
+++ b/_posts/2021-12-06-64.md
@@ -1,5 +1,5 @@
 ---
-title: "[minikube] `minikube start` 수행 시 'The \"docker\" driver should not be used with root privileges' 에러 발생"
+title: "[minikube] minikube start 수행 시 'The \"docker\" driver should not be used with root privileges' 에러 발생"
 date: 2021-12-06 23:14:00 +0900
 categories: ["Infra", "K8S"]
 tags: ["minikube", "k8s"]     # TAG names should always be lowercase
