inline code block 삭제

--- a/_posts/2021-12-06-64.md
+++ b/_posts/2021-12-06-64.md
@@ -5,7 +5,7 @@ categories: ["Infra", "K8S"]
 tags: ["minikube", "k8s"]     # TAG names should always be lowercase
 ---
 
-# `minikube start` 수행 시 The "docker" driver should not be used with root privileges 에러 발생
+# minikube start 수행 시 The "docker" driver should not be used with root privileges 에러 발생
 
 `minikube start` 명령어를 수행했을 때
 
