카테고리 추가

--- a/_posts/2023-02-21-96.md
+++ b/_posts/2023-02-21-96.md
@@ -1,5 +1,5 @@
 ---
-title: 'podman-compose runtimeerror: missing networks: privnet 발생 시 해결 방법'
+title: '[podman] podman-compose runtimeerror: missing networks: privnet 발생 시 해결 방법'
 date: 2023-02-21 11:39:00 +0900
 categories: ["Infra", "Docker"]
 tags: ["infra", "podman"]     # TAG names should always be lowercase
